--- a/auth-service/src/main/resources/thymeleaf/login.html
+++ b/auth-service/src/main/resources/thymeleaf/login.html
@@ -26,8 +26,8 @@
 </head>
 <body>
 <form id="loginForm">
-    <input type="text" id="username" placeholder="帳號" value="phillip" required>
-    <input type="password" id="password" placeholder="密碼" value="west12025" required>
+    <input type="text" id="username" placeholder="帳號" required>
+    <input type="password" id="password" placeholder="密碼" required>
     <button type="button" onclick="register()">註冊</button>
     <button type="button" onclick="login()">登入</button>
 </form>
@@ -37,7 +37,7 @@
         const username = document.getElementById('username').value;
         const password = document.getElementById('password').value;
 
-        fetch('http://localhost:8999/gw/auth/sign/sign-up', {
+        fetch('/gw/auth/sign/sign-up', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
@@ -59,7 +59,7 @@
         const username = document.getElementById('username').value;
         const password = document.getElementById('password').value;
 
-        fetch('http://localhost:8999/gw/auth/sign/sign-in', {
+        fetch('/gw/auth/sign/sign-in', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
@@ -77,6 +77,16 @@
         })
         .catch(error => console.error('Error:', error));
     }
+
+    function checkTokenAndRedirect() {
+        const token = document.cookie.split('; ').find(row => row.startsWith('token='));
+        if (token) {
+            window.location.href = '/gw/stock/p/main-page';
+        }
+    }
+
+    // 在頁面加載時檢查token
+    window.onload = checkTokenAndRedirect;
 </script>
 </body>
 </html>
