--- a/stock-service/src/main/resources/thymeleaf/real-time-page.html
+++ b/stock-service/src/main/resources/thymeleaf/real-time-page.html
@@ -43,8 +43,8 @@
 </head>
 <body>
 <div class="sidebar">
-    <a href="http://localhost:8999/gw/stock/p/main-page">主頁面</a>
-    <a href="http://localhost:8999/gw/stock/p/real-time-page">即時頁面</a>
+    <a href="/gw/stock/p/main-page">主頁面</a>
+    <a href="/gw/stock/p/real-time-page">即時頁面</a>
 </div>
 <div class="main-content">
     <form id="searchForm">
@@ -72,7 +72,7 @@
                 tags: document.getElementById('tags').value ? document.getElementById('tags').value.split(',') : null
             };
 
-            fetch('http://localhost:8999/gw/stock/v1/stock/condition/real-time/list', {
+            fetch('/gw/stock/v1/stock/condition/real-time/list', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
